avro_derive/tests/ui/avro_rs_226_skip_serializing_if.stderr
error: `#[serde(skip_serializing)]` and `#[serde(skip_serializing_if)]` require `#[avro(default = "..")]`
 --> tests/ui/avro_rs_226_skip_serializing_if.rs:6:5
  |
6 | /     #[serde(skip_serializing_if = "Option::is_none")]
7 | |     y: Option<String>,
  | |_____________________^
