avro_derive/tests/ui/avro_rs_226_skip_serializing_if.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
struct T {
    x: Option<i8>,
    #[serde(skip_serializing_if = "Option::is_none")]
    y: Option<String>,
    z: Option<i8>,
}

fn main() {}
